# prowlarr-llm-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  rutracker-fixed.yml  rutracker-org-anime-login.yml  rutracker-org-login.yml  sonarr.debug.txt
app/: config.py  container.py  main.py
app/controllers/: __init__.py  health.py  proxy.py
app/services/: __init__.py  llm.py  proxy.py
